--- a/ahoy.css
+++ b/ahoy.css
@@ -46,6 +46,8 @@
 
     background-color: rgb(252, 254, 249);  /* @snow */
     color: rgb(51, 51, 51);
+    transition: color 1s, background-color 1s;
+    transition-timing-function: ease-in;
 
     /*
     background-position: 50% 100%;
@@ -54,6 +56,10 @@
     background-repeat: no-repeat;
     background-image: url(ocean.jpg);
     */
+  }
+  .night body {
+    background-color: rgb(51, 51, 51);
+    color: rgb(252, 254, 249);  /* @snow */
   }
   @media (min-width: 300px), (min-height: 300px) {
     body {
@@ -308,6 +314,15 @@
   .sun svg circle,
   .sun svg path {
     fill: rgb(255, 235, 80);
+  }
+  .night body .sun svg circle {
+    fill: rgb(252, 254, 249);  /* @snow */
+  }
+  .night body .sun svg path {
+    fill: transparent;
+  }
+  .night body .clouds {
+    opacity: 0.025;
   }
 
   @keyframes sun-path {
