--- a/ahoy.css
+++ b/ahoy.css
@@ -1010,6 +1010,8 @@
 
   .container > div a {
     background-image: none;
+    color: inherit;
+    text-decoration: none;
   }
 
   @media (min-width: 25em) {
@@ -1116,20 +1118,22 @@
     padding: 0.375em 0.7em 0;
     border-bottom: 0.25em solid rgb(40, 155, 215);
   }
-  .banner h1,
-  .banner h2,
-  .banner h3 {
-    /* --wave-outline-light-blue */
-    background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
-    background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
+  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
+    .banner h1,
+    .banner h2,
+    .banner h3 {
+      /* --wave-outline-light-blue */
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
+      background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
 
-    background-repeat: repeat-x;
-    background-position: bottom;
-    background-size: 1em auto;
-  }
-  .banner h3:last-child {
-    padding-bottom: 1.05em !important;
-    background-position: 50% 65% !important;
+      background-repeat: repeat-x;
+      background-position: bottom;
+      background-size: 1em auto;
+    }
+    .banner h3:last-child {
+      padding-bottom: 1.05em !important;
+      background-position: 50% 65% !important;
+    }
   }
   .banner p {
     position: relative;
