--- a/ahoy.css
+++ b/ahoy.css
@@ -1342,6 +1342,9 @@
 
   .night body {
     background-color: rgb(31, 41, 51);
+    /*
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 50vh, rgba(0, 0, 0, 0));
+    */
     color: rgb(252, 254, 249);  /* @snow */
   }
   /*
